public/stylesheets/aboutMe.css
/* * {
  border: 1px red solid;
} */

.underline {
  text-decoration: underline;
}

.content-container {
  margin: 20px auto;
  padding-left: 40px;
  padding-right: 40px;
}

#contact-link {
  text-decoration: none;
  color: #fff;
  transition: .25s;
}
#contact-link:hover {
  color: #00c0f3;
}

#languages-list {
  list-style: none;
  padding: 0;
}

.mobile-title {
  margin-bottom: 10px;
}

/* MEDIA QUERIES */
@media (min-width: 0) {
  
  #about-me-title {
    font-size: 39px;
    font-weight: 700;
    letter-spacing: 1px;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  #about-me-text {
    margin-top: 10px;
    max-width: 520px;
  }
  
  #languages-list {
    margin-top: 60px;
  }

  #contact-div {
    margin-top: 60px;
  }

  #language-list-title,
  #contact-title,
  #contact-link {
    font-size: 20;
    font-weight: 300;
    /* letter-spacing: 1px; */
  }

}

@media (min-width: 576px) {
  
}

@media (min-width: 768px) {
  
  #about-me-title {
    font-size: 50px;
    font-weight: 700px;
  }

  #about-me-title {
    margin-top: 40px;
  }

  #contact-div {
    margin-top: 60px;
  }

  #about-me-text {
    margin-top: 16px;
    max-width: 500px;
  }

  #contact-div * {
    margin: 0;
    /* font-size: 22; */
  }
  
  
}

@media (min-width: 992px) {
}

@media (min-width: 1200px) {
}

